Wrap images on a box and prevent title overlap

--- a/scripts/core/editor3/styles.scss
+++ b/scripts/core/editor3/styles.scss
@@ -132,11 +132,10 @@ $editor-styleButton-active-color:#5890ff;
 
     .image-block {
         position: relative;
+        padding: 1rem;
 
-        &__remove > .btn {
-            position: absolute;
-            top: 1rem;
-            right: 1rem;
+        &__remove .btn {
+            margin-bottom: 1rem;
         }
     }
 
